kyverno/compliance/workload/kyverno_kubernetes_025.yaml
# policy id: kyverno-kubernetes-025
# reason: enforce organization security control for kubernetes, using Kyverno, Deployments must have availability protection
# severity: medium

apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: kyverno-kubernetes-025-require-pod-disruption-budget
  annotations:
    policies.kyverno.io/title: Deployments must have availability protection
    policies.kyverno.io/category: compliance
    policies.kyverno.io/severity: medium
    policies.kyverno.io/description: Deployments must have availability protection.
spec:
  validationFailureAction: Enforce
  background: true
  rules:
    - name: require-pod-disruption-budget
      match:
        any:
          - resources:
              kinds:
                - Deployment
      validate:
        message: Deployments must have availability protection.
        pattern:
          metadata.labels.pdb: 'required'
